# FRC-ROS

./: README.md  Setup.sh  SetupFRCROS.sh  SetupFRCRobot.sh  Update.sh  UpdateFRCROS.sh  UpdateFRCRobot.sh  depth_B00364725109104B.yaml  hokuyo_04lx_laser.gazebo.xacro  rgb_B00364725109104B.yaml  run_ros_server.sh  tiger_ros.service
catkin_ws/src/frc_robot/: CMakeLists.txt  package.xml
catkin_ws/src/frc_robot/config/: diffdrive.yaml  elevator.yaml  explore.yaml  localization (copy 1).yaml  localization.yaml  move.yaml  odom_drivetrain.yaml  odom_icp.yaml  sim.yaml  slam (copy 1).yaml  slam.yaml  slam_gmapping.yaml  slam_sim.yaml  swervedrive.yaml  teleop.yaml
catkin_ws/src/frc_robot/config/Nav/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml
catkin_ws/src/frc_robot/launch/: auton.launch  display.launch  explore.launch  frc_stronghold.launch  gazebo.launch  kinectlidar.launch  localization.launch  main_control.launch  main_no_robot.launch  main_robot.launch  main_robot_no_odom.launch  main_sim.launch  main_sim_explore.launch  main_sim_offboard.launch  main_sim_onboard.launch  main_sim_onboard_explore.launch  move (copy 1).launch  odom_drivetrain.launch  odom_icp.launch  robot.launch  sim.launch  slam (copy 1).launch  slam.launch  slam_gmapping.launch  slam_icp.launch  slam_no_odom.launch  slam_rtabmap.launch  slam_sim.launch  state_publishers.launch  teleop.launch  user_interface.launch  visualize.launch  visualize_sim.launch
catkin_ws/src/frc_robot/rqt_gui/: frc-robot.perspective
catkin_ws/src/frc_robot/rviz/: urdf.rviz  urdf_2.rviz  urdf_sim.rviz
catkin_ws/src/frc_robot/urdf/: 00-default-swerve.urdf.xacro  00-default.urdf  00-default.urdf.xacro  chassis.urdf.xacro  drivetrain.urdf.xacro  elevator.urdf.xacro  inertia.urdf.xacro
catkin_ws/src/frc_robot/worlds/: frc_stronghold.world  random_stuff.world  random_stuff_bounded.world  random_stuff_unbounded.world
catkin_ws/src/frc_robot_auton/: CMakeLists.txt  package.xml
catkin_ws/src/frc_robot_auton/config/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  navfn_global_planner_params.yaml
catkin_ws/src/frc_robot_auton/launch/: auton.launch
catkin_ws/src/frc_robot_slam/: CMakeLists.txt  package.xml
catkin_ws/src/frc_robot_slam/config/: localization_amcl.yaml  odom_drivetrain.yaml  odom_fused.yaml  odom_icp.yaml  odom_icp_rgbd.yaml  odom_rgbd.yaml  slam.yaml  slam_gmapping.yaml  slam_hector.yaml  slam_rtabmap.yaml
catkin_ws/src/frc_robot_slam/launch/: localization_amcl.launch  odom_drivetrain.launch  odom_fused.launch  odom_icp.launch  odom_icp_rgbd.launch  odom_rgbd.launch  save_map.launch  slam.launch  slam_gmapping.launch  slam_hector.launch  slam_rtabmap.launch
catkin_ws/src/frc_robot_slam/saved_maps/: asdf.yaml  default_map (copy 1).yaml  default_map.yaml  test_map_12-3-2019.yaml
catkin_ws/src/networktable_bridge/: CMakeLists.txt  package.xml
catkin_ws/src/networktable_bridge/launch/: testing.launch
catkin_ws/src/networktable_bridge/scripts/: testing.py  transmit.py
catkin_ws/src/swerve_controller/: CMakeLists.txt  package.xml
catkin_ws/src/swerve_controller/config/: swerve_controller.yaml
catkin_ws/src/swerve_controller/include/: Constants.h
catkin_ws/src/swerve_controller/include/ros_dummies/: AHRS.h  CANEncoder.h  CANError.h  CANPIDController.h  CANSparkMax.h  ControlType.h  TalonSRX.h
catkin_ws/src/swerve_controller/include/swerve_controller/: odometry.h  speed_limiter.h  swerve_controller.h
catkin_ws/src/swerve_controller/include/units/: units.h
catkin_ws/src/swerve_controller/launch/: swerve_controller.launch
catkin_ws/src/swerve_controller/src/: odometry.cpp  speed_limiter.cpp  swerve_controller.cpp
catkin_ws/src/web_socket_client/: CMakeLists.txt  README.txt  package.xml
catkin_ws/src/web_socket_client/include/: WsClient.h  rosbridge_ws_client.hpp
catkin_ws/src/web_socket_client/src/: wsclient_test.cpp
(+44 files in other folders)
